--- a/app/src/main/res/layout/activity_detail_history.xml
+++ b/app/src/main/res/layout/activity_detail_history.xml
@@ -23,7 +23,7 @@
                 android:layout_height="260dp"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-                tools:src="@drawable/logo_kecil" />
+                tools:src="@drawable/icon" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -72,7 +72,7 @@
             android:layout_marginBottom="5dp"
             android:scaleType="centerCrop"
             app:layout_collapseMode="parallax"
-            tools:src="@drawable/logo_kecil"
+            tools:src="@drawable/icon"
             android:layout_gravity="center"/>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -98,7 +98,7 @@
                 android:layout_marginTop="30dp"
                 android:text="@string/rekomendasi"
                 android:textSize="26sp"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textStyle="bold"/>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_recipe"
