--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -76,7 +76,7 @@
             android:layout_marginBottom="5dp"
             android:scaleType="centerCrop"
             app:layout_collapseMode="parallax"
-            tools:src="@drawable/logo_kecil"
+            tools:src="@drawable/icon"
             android:layout_gravity="center"/>
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -102,7 +102,7 @@
                 android:layout_marginTop="30dp"
                 android:text="@string/rekomendasi"
                 android:textSize="26sp"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textStyle="bold"/>
 
             <androidx.recyclerview.widget.RecyclerView
