--- a/app/src/main/res/drawable/page_result_radius.xml
+++ b/app/src/main/res/drawable/page_result_radius.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:top="10dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/seed" />
+            <solid android:color="@color/md_theme_light_secondaryContainer" />
             <corners android:topLeftRadius="60dp" android:topRightRadius="60dp" />
         </shape>
     </item>
