--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -17,7 +17,7 @@
         android:orientation="vertical"
         android:id="@+id/cl_rv"
         android:padding="8dp"
-        android:background="@color/md_theme_light_primary">
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/judul_resep"
@@ -26,7 +26,7 @@
             android:layout_marginStart="27dp"
             android:layout_marginEnd="20dp"
             android:text="@string/judul_resep"
-            android:textColor="@color/md_theme_light_secondaryContainer"
+            android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
