--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -23,7 +23,7 @@
                 android:layout_height="260dp"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-                tools:src="@drawable/logo_kecil" />
+                tools:src="@drawable/icon" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
